# paymail-rs

./: Cargo.toml
src/: resolver.rs
