[package]
name = "paymail-rs"
version = "0.1.3"
edition = "2024"
description = "A fast, asynchronous Rust library for the BSV PayMail protocol"
license = "Open BSV"
repository = "https://github.com/murphsicles/paymail-rs"
authors = ["Dr. Roy Murphy"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
trust-dns-resolver = { version = "0.23.2", default-features = false, features = ["tokio-runtime"] }
chrono = "0.4.41"
async-mutex = "1.4.1"
sv = { git = "https://github.com/murphsicles/rust-sv.git", branch = "main" }
base64 = "0.22.1"
hex = "0.4.3"
async-trait = "0.1.89"
serde_json = "1.0.145"
ring = "0.17.14"
secp256k1 = { version = "0.31.1", features = ["recovery"] }
thiserror = "2.0.17"

[dev-dependencies]
wiremock = "0.6.4"
criterion = { version = "0.8.0", features = ["async_tokio"] }
mockall = "0.14"
